// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News should filter results based on category query and asset 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
          disabled=""
        >
          <div
            class="sc-bdfBwQ dlKckO mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group active"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ fzSuZU p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ fdJUih p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 ftPsqa bg-theme-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-3xl"
                data-testid="header__title"
              >
                Blockchain News
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-semibold text-theme-secondary-text"
                  >
                    Powered by
                  </span>
                  <svg
                    height="27"
                    width="100"
                  >
                    blockfolio.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 ftPsqa flex-1 bg-theme-secondary-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="container flex space-x-5 xl:space-x-8"
          >
            <div
              class="flex-none w-2/3"
            >
              <div
                class="space-y-5"
              >
                <div
                  data-testid="NewsCard"
                >
                  <div
                    class="bg-theme-background"
                  >
                    <button
                      class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                      data-testid="Card"
                      tabindex="-1"
                      type="button"
                    >
                      <div
                        class="flex flex-col p-4 space-y-6 bg-theme-background"
                      >
                        <div
                          class="flex justify-between w-full"
                        >
                          <div
                            class="flex items-center space-x-4"
                          >
                            <div
                              class="Circle__CircleWrapper-uw7h4j-0 kOlXCb ring-theme-background"
                              data-testid="NetworkIcon__placeholder"
                            />
                            <div>
                              <h4
                                class="text-lg font-semibold"
                                data-testid="NewsCard__asset-undefined"
                              />
                              <div
                                class="flex items-center space-x-4"
                              >
                                <p
                                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                  data-testid="NewsCard__author"
                                >
                                  Travis Walker, Co-Founder
                                </p>
                                <div
                                  class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
                                  type="vertical"
                                />
                                <p
                                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                  data-testid="NewsCard__date-created"
                                >
                                  <span
                                    data-testid="timeago"
                                  >
                                    A few seconds ago
                                  </span>
                                </p>
                              </div>
                            </div>
                          </div>
                          <div
                            class="flex flex-col justify-end"
                          >
                            <div
                              class="Label-sc-1tj9hzr-0 ftOOah"
                              color="warning"
                            >
                              <span
                                class="text-sm"
                                data-testid="NewsCard__category"
                              >
                                #Technical
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Divider-sc-19q4mlo-0 daSmjL border-theme-secondary-300 dark:border-theme-secondary-800"
                          type="horizontal"
                        />
                        <div
                          class="whitespace-pre-line text-theme-secondary-text"
                          data-testid="NewsCard__content"
                        >
                          Major League Hacking is having another virtual workshop showcasing ARK technology on August 19th 2020. Anyone can join at 5PM EDT to Build a Blockchain Taco Shop with ARK!

                          <a
                            class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                            data-testid="Link"
                            href="#"
                            rel="noopener noreferrer"
                            to="https://organize.mlh.io/participants/events/3858-build-a-blockchain-taco-shop-with-ark-io"
                          >
                            <span
                              class="Link__Content-sc-1q7sbxr-1 iOOQRq"
                            >
                              https://organize.mlh.io/participants/events/3858-build-a-blockchain-taco-shop-with-ark-io
                            </span>
                            <span
                              class="align-middle"
                            >
                              <div
                                class="sc-bdfBwQ dnaihB flex-shrink-0 duration-200 inline-block pb-px text-sm"
                                data-testid="Link__external"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  redirect.svg
                                </svg>
                              </div>
                            </span>
                          </a>
                        </div>
                      </div>
                      <div
                        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="relative"
                >
                  <div
                    class="flex absolute top-0 right-4 text-center rounded-b-xl bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <span
                      class="px-2 pt-1 pb-2 text-xs font-semibold text-theme-primary-600"
                    >
                      Ad
                    </span>
                  </div>
                  <img
                    alt="Blockfolio Banner"
                    class="w-full rounded-lg border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                    src="blockfolio-banner.png"
                  />
                  <div
                    class="absolute left-10 top-16"
                  >
                    <div
                      class="flex flex-col items-start space-y-5 text-white"
                    >
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://blockfolio.com/"
                      >
                        <span
                          class="Link__Content-sc-1q7sbxr-1 iOOQRq"
                        >
                          <svg
                            class="-mx-8 text-white"
                            height="47"
                            width="238"
                          >
                            blockfolio.svg
                          </svg>
                        </span>
                      </a>
                      <p
                        class="w-3/4 text-lg font-medium"
                      >
                        The world's most popular Bitcoin & cryptocurrency portfolio tracker. 100% free.
                      </p>
                    </div>
                    <div
                      class="flex mt-12 space-x-2"
                    >
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://itunes.apple.com/us/app/blockfolio-bitcoin-altcoin/id1095564685?mt=8"
                      >
                        <span
                          class="Link__Content-sc-1q7sbxr-1 iOOQRq"
                        >
                          <svg
                            class="w-32 h-10 b-0"
                          >
                            download-app-store.svg
                          </svg>
                        </span>
                      </a>
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://play.google.com/store/apps/details?id=com.blockfolio.blockfolio&hl=en_US"
                      >
                        <span
                          class="Link__Content-sc-1q7sbxr-1 iOOQRq"
                        >
                          <svg
                            class="w-32 h-10"
                          >
                            download-google-play.svg
                          </svg>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-center mt-10 w-full"
              />
            </div>
            <div
              class="relative w-1/3"
            >
              <div
                class="sticky top-26"
                data-testid="NewsOptions"
              >
                <div
                  class="overflow-y-auto p-10 pb-4 max-h-full rounded-lg border-2 bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <div
                    class="flex flex-col space-y-8"
                  >
                    <div
                      class="flex justify-between items-center py-4 px-2 rounded-md shadow-xl"
                    >
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        …
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 cRhsWS"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="NewsOptions__search"
                            maxlength="32"
                            placeholder="Search"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="sc-bdfBwQ hHLBkp mr-4 text-theme-primary-300 dark:text-theme-secondary-600"
                        height="18"
                        width="18"
                      >
                        <svg>
                          search.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
                      type="horizontal"
                    />
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <div
                        class="flex justify-between items-center"
                      >
                        <h5
                          class="font-semibold"
                        >
                          Category
                        </h5>
                        <button
                          class="text-xs font-semibold focus:outline-none text-theme-secondary-800"
                        >
                          Select All
                        </button>
                      </div>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Select your categories
                      </p>
                      <div
                        class="flex flex-wrap -mx-1"
                      >
                        <label
                          class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                          data-testid="NewsOptions__category-Technical"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-k7qbth-0 jXZdTM"
                            data-testid="SelectCategory__undefined"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                          >
                            #Technical
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                          data-testid="NewsOptions__category-Marketing"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-k7qbth-0 jXZdTM"
                            data-testid="SelectCategory__undefined"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                          >
                            #Marketing
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                          data-testid="NewsOptions__category-Community"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-k7qbth-0 jXZdTM"
                            data-testid="SelectCategory__undefined"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                          >
                            #Community
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                          data-testid="NewsOptions__category-Emergency"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-k7qbth-0 jXZdTM"
                            data-testid="SelectCategory__undefined"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                          >
                            #Emergency
                          </div>
                        </label>
                      </div>
                    </div>
                    <div
                      class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
                      type="horizontal"
                    />
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <h5
                        class="font-semibold"
                      >
                        Filter Assets
                      </h5>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Your current selections:
                      </p>
                      <div
                        class="pb-2.5"
                        data-testid="FilterNetwork"
                      >
                        <ul
                          class="flex flex-wrap"
                          data-testid="NetworkOptions"
                        >
                          <li
                            class="inline-block pr-5 pb-5 cursor-pointer"
                            data-testid="NetworkOption__ARK"
                          >
                            <div
                              class="Circle__CircleWrapper-uw7h4j-0 bNDQMV relative border-theme-success-500 text-theme-success-500 ring-theme-background"
                            >
                              <div
                                class="sc-bdfBwQ hjDozt"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
                              >
                                <div
                                  class="sc-bdfBwQ ejYZeh"
                                  height="12"
                                  width="12"
                                >
                                  <svg>
                                    checkmark.svg
                                  </svg>
                                </div>
                                <span />
                              </span>
                            </div>
                          </li>
                          <li
                            class="inline-block pr-5 pb-5 cursor-pointer"
                            data-testid="NetworkOption__LSK"
                          >
                            <div
                              class="Circle__CircleWrapper-uw7h4j-0 bNDQMV relative border-theme-secondary-300 text-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background"
                            >
                              <div
                                class="sc-bdfBwQ hjDozt"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lsk.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <span />
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`News should filter results based on category query and asset 2`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
          disabled=""
        >
          <div
            class="sc-bdfBwQ dlKckO mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-1 GOEfv"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group active"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ fzSuZU p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ hjDozt p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-2 gEXBfE"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ fdJUih p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 ftPsqa bg-theme-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-3xl"
                data-testid="header__title"
              >
                Blockchain News
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-semibold text-theme-secondary-text"
                  >
                    Powered by
                  </span>
                  <svg
                    height="27"
                    width="100"
                  >
                    blockfolio.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 ftPsqa flex-1 bg-theme-secondary-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="container flex space-x-5 xl:space-x-8"
          >
            <div
              class="flex-none w-2/3"
            >
              <div
                class="space-y-5"
              >
                <div
                  data-testid="NewsCard"
                >
                  <div
                    class="bg-theme-background"
                  >
                    <button
                      class="Cardstyles__CardButton-sc-1uddqgb-0 ixtuUQ"
                      data-testid="Card"
                      tabindex="-1"
                      type="button"
                    >
                      <div
                        class="flex flex-col p-4 space-y-6 bg-theme-background"
                      >
                        <div
                          class="flex justify-between w-full"
                        >
                          <div
                            class="flex items-center space-x-4"
                          >
                            <div
                              aria-label="ARK"
                              class="Circle__CircleWrapper-uw7h4j-0 kOlXCb border-theme-danger-200 text-theme-danger-400 ring-theme-background"
                              data-testid="NetworkIcon-ARK-ark.mainnet"
                            >
                              <div
                                class="sc-bdfBwQ hjDozt"
                                data-testid="NetworkIcon__icon"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                            <div>
                              <h4
                                class="text-lg font-semibold"
                                data-testid="NewsCard__asset-ARK Ecosystem"
                              >
                                ARK Ecosystem
                              </h4>
                              <div
                                class="flex items-center space-x-4"
                              >
                                <p
                                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                  data-testid="NewsCard__author"
                                >
                                  Travis Walker, Co-Founder
                                </p>
                                <div
                                  class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
                                  type="vertical"
                                />
                                <p
                                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                  data-testid="NewsCard__date-created"
                                >
                                  <span
                                    data-testid="timeago"
                                  >
                                    A few seconds ago
                                  </span>
                                </p>
                              </div>
                            </div>
                          </div>
                          <div
                            class="flex flex-col justify-end"
                          >
                            <div
                              class="Label-sc-1tj9hzr-0 ftOOah"
                              color="warning"
                            >
                              <span
                                class="text-sm"
                                data-testid="NewsCard__category"
                              >
                                #Technical
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Divider-sc-19q4mlo-0 daSmjL border-theme-secondary-300 dark:border-theme-secondary-800"
                          type="horizontal"
                        />
                        <div
                          class="whitespace-pre-line text-theme-secondary-text"
                          data-testid="NewsCard__content"
                        >
                          Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
                          <a
                            class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                            data-testid="Link"
                            href="#"
                            rel="noopener noreferrer"
                            to="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
                          >
                            <span
                              class="Link__Content-sc-1q7sbxr-1 iOOQRq"
                            >
                              https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
                            </span>
                            <span
                              class="align-middle"
                            >
                              <div
                                class="sc-bdfBwQ dnaihB flex-shrink-0 duration-200 inline-block pb-px text-sm"
                                data-testid="Link__external"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  redirect.svg
                                </svg>
                              </div>
                            </span>
                          </a>
                        </div>
                      </div>
                      <div
                        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="relative"
                >
                  <div
                    class="flex absolute top-0 right-4 text-center rounded-b-xl bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <span
                      class="px-2 pt-1 pb-2 text-xs font-semibold text-theme-primary-600"
                    >
                      Ad
                    </span>
                  </div>
                  <img
                    alt="Blockfolio Banner"
                    class="w-full rounded-lg border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                    src="blockfolio-banner.png"
                  />
                  <div
                    class="absolute left-10 top-16"
                  >
                    <div
                      class="flex flex-col items-start space-y-5 text-white"
                    >
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://blockfolio.com/"
                      >
                        <span
                          class="Link__Content-sc-1q7sbxr-1 iOOQRq"
                        >
                          <svg
                            class="-mx-8 text-white"
                            height="47"
                            width="238"
                          >
                            blockfolio.svg
                          </svg>
                        </span>
                      </a>
                      <p
                        class="w-3/4 text-lg font-medium"
                      >
                        The world's most popular Bitcoin & cryptocurrency portfolio tracker. 100% free.
                      </p>
                    </div>
                    <div
                      class="flex mt-12 space-x-2"
                    >
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://itunes.apple.com/us/app/blockfolio-bitcoin-altcoin/id1095564685?mt=8"
                      >
                        <span
                          class="Link__Content-sc-1q7sbxr-1 iOOQRq"
                        >
                          <svg
                            class="w-32 h-10 b-0"
                          >
                            download-app-store.svg
                          </svg>
                        </span>
                      </a>
                      <a
                        class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://play.google.com/store/apps/details?id=com.blockfolio.blockfolio&hl=en_US"
                      >
                        <span
                          class="Link__Content-sc-1q7sbxr-1 iOOQRq"
                        >
                          <svg
                            class="w-32 h-10"
                          >
                            download-google-play.svg
                          </svg>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-center mt-10 w-full"
              >
                <nav
                  class="Pagination__Wrapper-x7juhx-0 hbWMHF"
                  data-testid="Pagination"
                >
                  <div
                    class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <button
                      aria-current="true"
                      aria-label="Page 1"
                      class="Pagination__PaginationButtonStyled-x7juhx-1 cSnAwK current-page"
                      type="button"
                    >
                      1
                    </button>
                    <button
                      aria-label="Page 2"
                      class="Pagination__PaginationButtonStyled-x7juhx-1 cSnAwK"
                      type="button"
                    >
                      2
                    </button>
                    <button
                      aria-label="Page 3"
                      class="Pagination__PaginationButtonStyled-x7juhx-1 cSnAwK"
                      type="button"
                    >
                      3
                    </button>
                    <button
                      aria-label="Page 4"
                      class="Pagination__PaginationButtonStyled-x7juhx-1 cSnAwK"
                      type="button"
                    >
                      4
                    </button>
                    <button
                      aria-label="Page 5"
                      class="Pagination__PaginationButtonStyled-x7juhx-1 cSnAwK"
                      type="button"
                    >
                      5
                    </button>
                    <button
                      aria-label="Page 6"
                      class="Pagination__PaginationButtonStyled-x7juhx-1 cSnAwK"
                      type="button"
                    >
                      6
                    </button>
                    <button
                      aria-label="Page 7"
                      class="Pagination__PaginationButtonStyled-x7juhx-1 cSnAwK"
                      type="button"
                    >
                      7
                    </button>
                    <button
                      class="PaginationSearch__PaginationSearchButtonStyled-rcir65-1 wZsdG group"
                      data-testid="PaginationSearchButton"
                      type="button"
                    >
                      <span
                        class="group-hover:invisible"
                      >
                        <span>
                          …
                        </span>
                      </span>
                      <span
                        class="flex absolute top-0 right-0 bottom-0 left-0 invisible justify-center items-center group-hover:visible"
                        data-testid="PaginationSearchButton__search"
                      >
                        <div
                          class="sc-bdfBwQ qoThl"
                          height="13"
                          width="13"
                        >
                          <svg>
                            search.svg
                          </svg>
                        </div>
                      </span>
                    </button>
                  </div>
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                    data-testid="Pagination__next"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Next
                      <div
                        class="sc-bdfBwQ ejYZeh ml-2"
                        height="12"
                        width="12"
                      >
                        <svg>
                          forward.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                    data-testid="Pagination__last"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ ejYZeh"
                        height="12"
                        width="12"
                      >
                        <svg>
                          pagination-last.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </nav>
              </div>
            </div>
            <div
              class="relative w-1/3"
            >
              <div
                class="sticky top-26"
                data-testid="NewsOptions"
              >
                <div
                  class="overflow-y-auto p-10 pb-4 max-h-full rounded-lg border-2 bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <div
                    class="flex flex-col space-y-8"
                  >
                    <div
                      class="flex justify-between items-center py-4 px-2 rounded-md shadow-xl"
                    >
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        …
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 cRhsWS"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="NewsOptions__search"
                            maxlength="32"
                            placeholder="Search"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="sc-bdfBwQ hHLBkp mr-4 text-theme-primary-300 dark:text-theme-secondary-600"
                        height="18"
                        width="18"
                      >
                        <svg>
                          search.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
                      type="horizontal"
                    />
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <div
                        class="flex justify-between items-center"
                      >
                        <h5
                          class="font-semibold"
                        >
                          Category
                        </h5>
                      </div>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Select your categories
                      </p>
                      <div
                        class="flex flex-wrap -mx-1"
                      >
                        <label
                          class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                          data-testid="NewsOptions__category-Technical"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-k7qbth-0 jXZdTM"
                            data-testid="SelectCategory__undefined"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                          >
                            #Technical
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                          data-testid="NewsOptions__category-Marketing"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-k7qbth-0 jXZdTM"
                            data-testid="SelectCategory__undefined"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                          >
                            #Marketing
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                          data-testid="NewsOptions__category-Community"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-k7qbth-0 jXZdTM"
                            data-testid="SelectCategory__undefined"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                          >
                            #Community
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-k7qbth-2 bkqSTC p-1"
                          data-testid="NewsOptions__category-Emergency"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-k7qbth-0 jXZdTM"
                            data-testid="SelectCategory__undefined"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-k7qbth-1 fYwsfS"
                          >
                            #Emergency
                          </div>
                        </label>
                      </div>
                    </div>
                    <div
                      class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
                      type="horizontal"
                    />
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <h5
                        class="font-semibold"
                      >
                        Filter Assets
                      </h5>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Your current selections:
                      </p>
                      <div
                        class="pb-2.5"
                        data-testid="FilterNetwork"
                      >
                        <ul
                          class="flex flex-wrap"
                          data-testid="NetworkOptions"
                        >
                          <li
                            class="inline-block pr-5 pb-5 cursor-pointer"
                            data-testid="NetworkOption__ARK"
                          >
                            <div
                              class="Circle__CircleWrapper-uw7h4j-0 bNDQMV relative border-theme-success-500 text-theme-success-500 ring-theme-background"
                            >
                              <div
                                class="sc-bdfBwQ hjDozt"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
                              >
                                <div
                                  class="sc-bdfBwQ ejYZeh"
                                  height="12"
                                  width="12"
                                >
                                  <svg>
                                    checkmark.svg
                                  </svg>
                                </div>
                                <span />
                              </span>
                            </div>
                          </li>
                          <li
                            class="inline-block pr-5 pb-5 cursor-pointer"
                            data-testid="NetworkOption__LSK"
                          >
                            <div
                              class="Circle__CircleWrapper-uw7h4j-0 bNDQMV relative border-theme-secondary-300 text-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background"
                            >
                              <div
                                class="sc-bdfBwQ hjDozt"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lsk.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-1d7juq8-0 fMCGPT flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <span />
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
